--- a/src/index.scss
+++ b/src/index.scss
@@ -6,4 +6,15 @@
 	h1 {
 		font-variant: small-caps;
 	}
+
+	button {
+		@apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-1.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
+	}
+}
+
+body {
+  background-image: url('../images/background.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
